@@ -45,6 +45,9 @@
 - Bugfix: Use the correct method signature for the error handler
   callback.
 - Bugfix: Fixed the BOM detection in property names.
+- Bugfix: Prevent a second the JS initialization if the hosting
+  cms thinks that calling 'DOMContentLoaded' more than once is a
+  good idea.
 
 4.1.6
 - Bugfix: Added the missing path filter to the real path resolver.
